--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@types/node": "^22.0.0",
     "typescript": "^5.5.4"
   },
-  "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.621.0",
-    "@aws-sdk/lib-dynamodb": "^3.621.0"
+  "peerDependencies": {
+    "@aws-sdk/client-dynamodb": "3.x",
+    "@aws-sdk/lib-dynamodb": "3.x"
   }
 }
