--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc",
     "release": "npm run build && npm version patch && npm publish",
+    "minor-release": "npm run build && npm version minor && npm publish",
     "test": "vitest"
   },
   "repository": {
