chore: Update tsconfig.json to use Node16 module and moduleResolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
       "outDir": "./dist",
       "target": "es6",
       "lib": ["esnext", "es2018"],
-      "module": "commonjs",
+      "module": "Node16",
       "esModuleInterop": true,
       "baseUrl": ".",
-      "moduleResolution": "node",
+      "moduleResolution": "node16",
       "sourceMap": true,
       "declaration": true,
       "strict": true,
