--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "browser": "dist/client.js",
+  "type": "module",
   "files": [
     "dist"
   ],
