--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,4 +16,5 @@
       "skipLibCheck": true,
       "experimentalDecorators": true,
   },
+  "exclude": ["node_modules", "**/*.test.ts", "dist"]
 }
