--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "browser": "dist/client.js",
-  "type": "module",
   "files": [
     "dist"
   ],
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "require": "./dist/index.js"
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
     },
     "./client": {
       "import": "./dist/client.js",
-      "require": "./dist/client.js"
+      "require": "./dist/client.js",
+      "types": "./dist/client.d.ts"
     }
   },
   "scripts": {
